<resources>
    <string name="app_name">ProjectTMS</string>
    <string name="My_buildings">Мои дома для обхода</string>
    <string name="Household">Квартир:</string>
    <string name="notOpen">Не открыто:</string>
    <string name="buildings">Дома</string>
    <string name="contacts">Контакты</string>
    <string name="results">Статистика</string>
    <string name="login">Логин</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login_button">Авторизация</string>
    <string name="startWork">Начать работу по дому</string>
    <string name="showHH">Просмотреть квартиры</string>
    <string name="showContacts">Показать контакты</string>
    <string name="notOpenHH">Не открыта:</string>
    <string name="notAtHome">Нет дома</string>
    <string name="noBell">Нет звонка</string>
    <string name="notOpened">Не открыли</string>
    <string name="thinkingHH">Думает:</string>
    <string name="thinkingStatus">Думает</string>
    <string name="createContact">Создать контакт</string>
    <string name="refuseBeforePres">Отказ до презентации:</string>
    <string name="oldsStatus">Пенсионеры</string>
    <string name="notListened">Не стали слушать</string>
    <string name="refuseAfterPres">Отказ после презентации:</string>
    <string name="badReviews">Отзывы</string>
    <string name="cabel">Провода</string>
    <string name="costly">Дорого</string>
    <string name="obligations">Привязка/акция</string>
    <string name="doNotWant">Лень заниматься</string>
    <string name="contractHH">Договор:</string>
    <string name="contractStatus">Договор</string>
    <string name="createContract">Создать заявку</string>
    <string name="commentsToStatus">Комментарии к статусу:</string>
    <string name="save">Сохранить</string>
    <string name="addContactsInfoTitle">Добавить данные</string>
    <string name="name">Имя:</string>
    <string name="phoneNumber">Телефон:</string>
    <string name="fixedProvider">Провайдер fixed:</string>
    <string name="btk">БТК</string>
    <string name="mts">МТС</string>
    <string name="unet">Unet</string>
    <string name="amigo">Amigo</string>
    <string name="cosmos">Cosmos</string>
    <string name="other">Другой</string>
    <string name="mobileProvider">Провайдер mobile:</string>
    <string name="a1">A1</string>
    <string name="life">Life</string>
    <string name="totalPrice">Общая плата:</string>
    <string name="_40byn">40BYN</string>
    <string name="_50byn">50BYN</string>
    <string name="_60byn">60BYN</string>
    <string name="_70byn">70BYN и более</string>
    <string name="comments">Комментарий:</string>
    <string name="nextContactDate">Дата следующего контакта:</string>
    <string name="my_buildings">Мои дома</string>
    <string name="return_with_no_changes">Вернуться без изменений</string>
    <string name="profile">Профиль</string>
    <string name="title_app">SalesAppp</string>
    <string name="exit">Выход</string>
    <string name="contactsByBuildings">Контакты по домам</string>
    <string name="contactsTitle">Контактов:</string>
    <string name="forTodayContacts">На сегодня:</string>
    <string name="buildings_with_contacts">Контакты по домам</string>
    <string name="all_buildings">Все дома</string>
    <string name="editContactInfo">Редактировать</string>
    <string name="make_a_call">Позвонить  </string>
    <string name="makeCall">Позвонить</string>
    <string name="editContact">Редактировать</string>
    <string name="comeLater">Зайти позже</string>
    <string name="addStatus">Добавить статус</string>
    <string name="expired">Просрочены:</string>
    <string name="numberOfUsers">Количество пользователей: </string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3 и более</string>
    <string name="people">человек</string>
</resources>