<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/notOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notOpenHH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupNotOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedChip="@id/chipGroupNotOpen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notOpen"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNotAtHome"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/notAtHome" />
        <!--            android:checked="true"-->

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNoBell"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/noBell" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNotOpen"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/notOpened" />
        <!-- Chips can be declared here, or added dynamically. -->

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/thinking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thinkingHH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupNotOpen" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupThinking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thinking"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipThinking"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/thinkingStatus" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/addContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/createContact"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/chipGroupThinking"
        app:layout_constraintTop_toBottomOf="@id/thinking" />

    <TextView
        android:id="@+id/refuseBeforePres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refuseBeforePres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupThinking" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupRefuseBeforePres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refuseBeforePres"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOlds"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/oldsStatus" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNotListen"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/notListened" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/refuseAfterPres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refuseAfterPres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupRefuseBeforePres" />

    <HorizontalScrollView
        android:id="@+id/refuseAfterPresHorizontalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refuseAfterPres">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupRefuseAfterPres"
            app:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBadReviews"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/badReviews" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFiber"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/cabel" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCostly"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/costly" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipObligations"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/obligations" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipNotWant"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/doNotWant" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contractHH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refuseAfterPresHorizontalView" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupContract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contract"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipContract"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/contractStatus" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/requestForConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/createContract"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/chipGroupContract"
        app:layout_constraintTop_toBottomOf="@id/contract" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentsInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupContract">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/commentsInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/commentsToStatus" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>